--- a/01.Historia.tex
+++ b/01.Historia.tex
@@ -1,6 +1,6 @@
 	\chapter[INTRODUCCIÓN HISTÓRICA DEL DODECAFONISMO]{INTRODUCCIÓN HISTÓRI- CA DEL DODECAFONISMO}
-	\section[R. WAGNER Y LA EMANCIPACIÓN DE LA DISONANCIA]{RICHARD WAGNER Y LA EMANCIPACIÓN DE LA DISONANCIA}
-		\begin{wrapfigure}{R}{0.3\textwidth}
+	\section{Richard Wagner y la emancipación de la disonancia}
+		\begin{wrapfigure}{r}{0.3\textwidth}
 			\captionsetup{justification=centering, font=footnotesize}
 			\vspace{-0.5cm}
 			\centering{
@@ -15,7 +15,7 @@
 		
 		Siguiendo la mentalidad alemana del progreso como un camino ascendente, el paso siguiente para la composición musical debía consistir en deshacerse progresivamente de la tonalidad y desarrollar la <<emancipación de la disonancia>>\footnote{Arnold Schoenberg, \emph{Composition with twelve tones}, en \emph{Style and Idea}, 1950.}. Así fue como Arnold Schoenberg ideó sus teorías del pensamiento musical, y éstas dieron paso a la creación de la atonalidad. \cite{kinney}
 	
-	\section{POSROMANTICISMO Y ATONALISMO DE SCHOENBERG}
+	\section{Posromanticismo y atonalismo de Schoenberg}
 		Fuertemente influido por Richard Wagner y Johannes Brahms (1833--1897) desde su adolescencia, Schoenberg comenzó componiendo al estilo posromántico de su época, llevando el cromatismo y la orquestación hasta el extremo. Sin embargo, y no espontáneamente, empezó a buscar en sus composiciones que cada sonido tuviera valor por sí mismo, un valor independiente de su funcionalidad tonal. 
 		
 		\begin{wrapfigure}{L}{0.3\textwidth}
@@ -41,7 +41,7 @@
 		
 		En esta obra no sólo hay una ausencia total de relaciones tonales, sino que el tratamiento vocal evita también cualquier relación estética con las técnicas tradicionales: es un \emph{Sprechgesang}, un canto hablado. De hecho, Schoenberg se refiere a estas piezas no como canciones, sino como melodramas. \cite{diaz}
 		
-	\section{EL SURGIMIENTO DE UN SISTEMA}
+	\section{El surgimiento de un sistema}
 		Schoenberg no estaba satisfecho con la técnica compositiva que utilizaba, ya que admiraba las obras extensas de los músicos románticos y pensaba que su atonalidad no podía sostener una obra de gran envergadura. Es decir, necesitaba un hilo conductor mejor que los motivos para poder componer obras atonales más largas.
 		
 		Además, por aquella época sufrió una crisis en muchos aspectos de su vida. En lo personal, su mujer Matilde Zemlinsky acababa de abandonarlo por otro hombre, aunque posteriormente volvería junto al compositor. Y, en lo profesional, sus obras no eran del gusto del público, por lo que no contaba con suficiente dinero para mantener a su familia. Todas estas circunstancias, unidas al desarrollo de la Primera Guerra Mundial, no le permitieron componer muchas obras entre 1914 y 1923.
