--- a/03.Suite.tex
+++ b/03.Suite.tex
@@ -1,6 +1,6 @@
 \chapter{ANÁLISIS DE UNA OBRA DODECAFÓNICA: OP. 25}
 \label{suitechapter}
-	\section{SERIES DE LA SUITE OP. 25}
+	\section{Series de la Suite op. 25}
 		Lo primero que hará un compositor dodecafónico antes de empezar a componer será escoger su serie original. Su elección nunca es una simple cuestión de azar; al contrario, ya que las singularidades de la serie darán un carácter especial a toda la obra. Por ejemplo, el compositor puede escoger una serie con simetrías, y así tendrá series repetidas entre su espectro serial. También puede tener simetrías internas solo en un fragmento de tres o cuatro notas, y de este modo podrá el compositor oscilar entre varias series del espectro que se parezcan entre sí.\footnote{Para un estudio completo de las relaciones de similitud entre series se recomienda \emph{On the Similarity of Twelve-Tone Rows}, de Tuukka Ilomäki. \cite{ilomaki}}
 		
 		En la Suite para Piano Op. 25, Schoenberg escoge su serie $\sigma$ para resaltar el intervalo de tritono (6 semitonos). A continuación se observan en negrita los intervalos entre las notas de esta serie, en unidad de semitono:
@@ -17,7 +17,7 @@
 		
 		Se han realizado estudios -- como el de Martha Hyde \cite{hyde} -- en los que se limitan las series utilizadas en la Suite a cuatro: T$^0$, T$^6$, I e IT$^6$, pero ya que el objetivo de este texto no es analizar la obra entera se dejará esta cuestión para análisis posteriores.
 		
-	\section{DESCRIPCIÓN DE LA SUITE OP. 25}
+	\section{Descripción de la Suite op. 25}
 		Schoenberg realiza en la serie $\sigma$ una partición triple; es decir, la serie se divide en tres tetracordios, y cada uno de ellos contiene un intervalo de tritono. El último tetracordio, si se retrograda, consta de las notas 10 -- 9 -- 0 -- 11, que en notación germánica es la secuencia BACH. Esto puede ser un homenaje al compositor Johann Sebastian Bach (1685—1750), ya que Schoenberg admiraba a los grandes compositores anteriores a él por las estructuras formales de sus obras. \cite{xiao}
 		
 		Otro posible homenaje a Bach y sus contemporáneos barrocos es precisamente la forma de la obra: es una Suite, género cultivado durante los siglos XVII y XVIII que se compone de una variedad de danzas. La Suite de Schoenberg está formada por seis danzas: un Preludio, una Gavota, una Musette, un Intermezzo -- que no tiene influencia barroca sino más bien de Brahms, otro modelo para Schoenberg --, un Minueto con Trío y una Giga. Además, el estilo, la textura -- contrapuntística, típicamente barroca -- y la estructura de cada danza se corresponden con los estilos, texturas y estructuras de las danzas homónimas del periodo bachiano.
@@ -26,7 +26,7 @@
         
         Al componer la obra, Schoenberg trata cada tetracordio como una subunidad individual. Los superpone contra otras series del espectro también divididas, o utiliza sus notas como un solo acorde cuatríada. Estas divisiones no sólo sirven para hacer la serie más reconocible o añadir cohesión a la obra, sino que además facilitan el desarrollo de la serie específicamente en el estilo de cada danza.
 		
-	\section{ANÁLISIS DE LA MUSETTE}
+	\section{Análisis de la Musette}
 		En el tercer movimiento de la Suite, la Musette, Schoenberg recrea la danza barroca que toma su nombre del instrumento homónimo: la \emph{cornamusa}, de la familia de la gaita. La música compuesta para estos instrumentos suele consistir en una melodía acompañada por una nota pedal, que se traduce aquí en la presencia de un bordón sobre el Sol$\natural$ (nota 7). Esta nota se extrae de cada una de las series utilizadas y se forma con ella un ostinato rítmico en la mano izquierda del piano. Con el resto de sonidos de cada serie, Schoenberg vuelve a emular el estilo de la danza barroca y articula un discurso polifónico a dos voces con ritmos esencialmente cortos.
 		
 		A partir de la doble barra del compás 9, el Re$\flat$ (nota 1) acompaña a Sol$\natural$ y ambos crean un doble bordón en la mano izquierda. La elección de esas dos notas está estrechamente relacionada con la tradicional relación de quinta justa formada por Sol$\natural$ y Re$\natural$ en la música tonal. Schoenberg sustituye las quintas justas tonales por los tritonos dodecafónicos, subrayando aún más su <<emancipación de la disonancia>>.
