--- a/04.Grupo.tex
+++ b/04.Grupo.tex
@@ -1,5 +1,5 @@
 \chapter{EL GRUPO DE LAS TRANSFORMACIONES}
-	\section{NUEVAS DEFINICIONES Y NUEVAS TRANSFORMACIONES}
+	\section{Nuevas definiciones y nuevas transformaciones}
 		\label{ciclico}
 		Las fórmulas de las transformaciones del apartado \ref{transPsi} quedaron de esta manera:
 		\vspace{-0.9cm}
@@ -43,7 +43,7 @@
 		\end{multicols}
 		
 		\newpage
-	\section{DIAGRAMAS DE RELOJ}
+	\section{Diagramas de reloj}
 	\label{diagramas}
 	
 		\begin{wrapfigure}{R}{0.23\textwidth}
@@ -141,7 +141,7 @@
 			\end{multicols}
 		\end{center}		
 		
-	\section[EL GRUPO: D$_{12}$ x D$_{12}$]{EL GRUPO: D$_{\textbf{12}}$ x D$_{\textbf{12}}$}
+	\section[El grupo: D$_{12}$ x D$_{12}$]{El grupo: D$_{\textbf{12}}$ x D$_{\textbf{12}}$}
 		\label{grupoD}
 		El conjunto de transformaciones \{S, T, V, C\} está compuesto por dos parejas con semejanzas entre sí. S es una reflexión y T una rotación de orden 12 -- es decir, que al aplicarla 12 veces se vuelve a la identidad -- y ambas se aplican a la figura entera; es como mover el diagrama por el papel. En cambio, V es una reflexión de la flecha en sí, y C una rotación -- también de orden 12 -- de la flecha sobre la línea; ambas aplicadas al interior de la figura.
 		
@@ -239,7 +239,7 @@
 		\end{multicols}
 		
 		
-	\section{CONMUTATIVIDAD ENTRE LOS ELEMENTOS DEL GRUPO}
+	\section{Conmutatividad entre los elementos del grupo}
 	\label{conmut}
 		% comprobar cosos que conmutan, mencionar cosos que conmutan en el otro sistema
 		
