--- a/05.Serialismo.tex
+++ b/05.Serialismo.tex
@@ -1,5 +1,5 @@
 \chapter{EL SURGIMIENTO DEL SERIALISMO INTEGRAL}
-	\section[ALBAN BERG Y ANTON WEBERN]{ALBAN BERG Y ANTON WEBERN: LA SEGUNDA ESCUELA DE VIENA}
+	\section{Alban Berg y Anton Webern: la Segunda Escuela de Viena}
 	\label{berweb}
 	Además de Schoenberg, hubo dos compositores más que contribuyeron al desarrollo del dodecafonismo y que demostraron con sus diferentes estilos la versatilidad del sistema. Éstos fueron los discípulos de Schoenberg: Alban Berg y Anton Webern. 
 	
@@ -22,14 +22,14 @@
         
 	Durante la ocupación de Viena, Webern salió de su casa una noche tras el toque de queda, y un soldado norteamericano, probablemente en estado de embriaguez, lo mató a tiros. Así, Schoenberg, el maestro y el más mayor de los tres, sobrevivió a sus dos alumnos exiliado en Estados Unidos.
     
-	\section{LA ESCUELA DE DARMSTADT}
+	\section{La escuela de Darmstadt}
 	Tras la Segunda Guerra Mundial, el mundo artístico estaba totalmente destruido. La violencia, la censura y la incomunicación habían impedido cualquier posible desarrollo creativo, y los artistas de la generación anterior se habían aislado, exiliado o habían fallecido. Volver a construir los pilares del arte era el cometido de la nueva generación de artistas, quienes compartían la sensación de que el mundo había renacido y el tiempo había comenzado de nuevo.
 	
 	En 1946 se fundaron los Cursos de Verano de Darmstadt, fundados por Wolfgang Steinecke y patrocinados por las fuerzas americanas, con el objetivo de retomar la actividad musical en la Alemania de la posguerra. Los cursos se centraron en dar a conocer las técnicas compositivas de las generaciones anteriores. Aunque el primer año estuvo enfocado en el movimiento neoclásico, fue en los años posteriores cuando se desarrolló un mayor interés por las técnicas serialistas.
 	
 	Los cursos resultaron en la aparición de una nueva escuela de compositores cuya finalidad artística era crear un lenguaje musical distinto y alejado de la tradición para, de esta forma, obtener una mayor libertad compositiva. Esta escuela tomó el nombre de la ciudad donde se realizaban los cursos: se llamó la Escuela de Darmstadt. El término fue acuñado por el compositor Luigi Nono en una de sus clases magistrales en 1957, y con él se describía a sí mismo y a sus compañeros compositores: Pierre Boulez, Karlheinz Stockhausen y Bruno Maderna. Para estos compositores, la tradición artística estaba demasiado relacionada con los fracasos políticos y las penurias sociales pasadas, y precisamente por ello creían necesario romper con todos los vínculos heredados.
 	
-		\begin{wrapfigure}{R}{0.3\textwidth}
+	\begin{wrapfigure}{R}{0.3\textwidth}
 		\captionsetup{justification=centering, font=footnotesize}
 		\vspace{-0.5cm}
 		\centering{
@@ -42,7 +42,7 @@
 
 	Desde sus comienzos, el serialismo integral suscitó numerosas críticas, incluso desde el propio colectivo vanguardista. Una de ellas fue la falta de elección del intérprete a la hora de transmitir la obra. El intérprete serialista debe reproducir con total exactitud cada detalle de la partitura, y, por tanto, no puede aportar carácter alguno. Otra de las críticas más extendidas fue la incapacidad para interpretar estas obras correctamente debido a su complejidad técnica. Además, los detalles que precisamente las hacen complejas son, en su mayor parte, inapreciables por parte del oyente.
 
-	\section{PIERRE BOULEZ}
+	\section{Pierre Boulez}
 	\label{boulez}
      \begin{wrapfigure}{L}{0.3\textwidth}
 		\captionsetup{justification=centering, font=footnotesize}
