--- a/08.Filosofia.tex
+++ b/08.Filosofia.tex
@@ -1,6 +1,6 @@
 	\chapter{EL SERIALISMO EN LA FILOSOFÍA DEL ARTE}
         % 08.Recorrido filosófico histórico, filosofía del arte (quotes), motivos míos (filosofía actual)
-    \section{LA VISIÓN ARTÍSTICA DE SCHOENBERG}
+    \section{La visión artística de Schoenberg}
     En julio de 1921, tras haber ideado los fundamentos del dodecafonismo, Schoenberg anunció a su discípulo Josef Rufer: \begin{quote}\emph{He realizado un descubrimiento que asegurará la supremacía de la música alemana durante los próximos cien años.}\end{quote}Durante la mayor parte de su vida, Schoenberg creyó que el público general acabaría aceptando la música dodecafónica del mismo modo que se habían aceptado los sistemas tonales durante siglos. No solo eso, sino que pensaba que trascurridos esos cien años los niños cantarían canciones infantiles dodecafónicas por el mundo. El dodecafonismo sería la música del mañana.
     
     Para él, la naturalidad del sistema dodecafónico residía en que era el resultado final de un proceso histórico: desde el contrapunto y el desarrollo motívico, practicado por los grandes maestros de la tradición alemana, hasta la disolución de la tonalidad, anticipada por la música postwagneriana e impresionista. Era parte de un continuo, del desarrollo de la historia de la música.
@@ -24,7 +24,7 @@
     \end{quote}
         
      
-	\section{EL VALOR INTRÍNSECO DEL DODECAFONISMO}
+	\section{El valor intrínseco del dodecafonismo}
 	Tras la muerte de Schoenberg en 1951 y durante dos décadas más, su sistema compositivo fue venerado por los compositores jóvenes más brillantes, pero después se desvaneció de las salas de conciertos y de la memoria musical colectiva. Hoy en día la música dodecafónica está muerta. Ya solo vive académicamente: como un ejemplo que estudiar del éxito de las vanguardias elitistas del siglo XX, como una antigualla en la vitrina de un museo. Pero musicalmente ya nadie la disfruta, nadie desea escucharla ni tocarla.
 	
 	¿Qué valor artístico tiene un arte que ya no se practica? Aún más, ¿qué valor tiene un arte que no gusta, no sólo a las mayorías desinformadas, sino incluso a los músicos más conocedores, un arte que solo gusta al propio autor y a su grupo de discípulos? El dodecafonismo emplea los recursos matemáticos con el fin de dotar de una sintaxis a la atonalidad, pero si estos no son identificables a través de la escucha, ¿cuál es entonces su cometido? ¿En qué medida afectan las reglas dodecafónicas al discurso sonoro de una pieza? Apenas es posible distinguir auditivamente una pieza meramente atonal de una dodecafónica. \cite{basomba}
@@ -41,7 +41,7 @@
 		\emph{Ningún artista, ningún poeta, ningún filósofo y ningún músico, cuyo pensamiento se desenvuelve en la más alta esfera, habrá de descender a la vulgaridad para mostrarse complacientes con un eslogan tal como <<Arte para todos>>. Porque si es arte no será para todos, y si es para todos no será arte.}\footnote{A. Schoenberg, \emph{New Music, Outmoded Music, Style and Idea}, 1946.}
 	\end{quote}
 	
-	\section[SERIALISMO DE ESCALAS NO CROMÁTICAS]{SERIALISMO DE ESCALAS NO CRO- MÁTICAS}
+	\section{Serialismo de escalas no cromáticas}
 	Tras cien años de cambios históricos transcendentales como el desarrollo de la tecnología y la globalización, la definición de arte es muy diferente a la que Schoenberg expresaba en su tiempo. El arte está cada vez más cerca del ciudadano de a pie, y se le intenta explicar y simplificar por todos los medios el arte que no entiende.
 	
 	Por ello, he decidido experimentar con la idea del dodecafonismo y despojarle de lo que, en mi opinión, provoca el rechazo general: la disonancia. Ya que esta proviene del cromatismo, la idea es utilizar escalas que no tengan intervalos de semitono, y con ellas crear un serialismo de menos notas. Modificaré las notas de una obra dodecafónica ya existente para que se adapte a la nueva escala utilizada, mientras que el ritmo, la duración, el timbre y las dinámicas, que siguen siendo producto del compositor original, se dejan intactas.
