--- a/10.Musescore.tex
+++ b/10.Musescore.tex
@@ -1,8 +1,8 @@
 	\chapter{RESULTADOS DE LAS MODIFICACIONES}
     
-    % 10.Plugin de Musescore, conclusiones
+    % 10.plugin de musescore, conclusiones
     
-    \section{OBRA DE SCHOENBERG}
+    \section{Obra de Schoenberg}
    
    	Tomando la música debussiana y las músicas orientales como referencia, he escogido la escala pentatónica para aplicarla a la Musette de la Suite para piano Op. 25 de Schoenberg. Para relacionar la escala dodecafónica con la nueva escala, se debe crear una función que relacione las notas de ambos conjuntos. Yo he tomado esta función:
    	$$\left.\begin{matrix}\text{Escala dodecafónica:}&0&1&2&3&4&5&6&7&8&9&10&11\\\text{Escala pentatónica:}&0&0&2&2&4&4&7&7&7&9&9&0\\\end{matrix}\right.$$
@@ -22,6 +22,6 @@
    	$$\left.\begin{matrix}\text{Escala dodecafónica:}&0&1&2&3&4&5&6&7&8&9&10&11\\\text{Escala heptafónica:}&0&0&2&2&4&5&5&7&7&9&9&11\\\end{matrix}\right.$$
    	$$\left.\begin{matrix}\text{Do}&\text{Do\#}&\text{Re}&\text{Re\#}&\text{Mi}&\text{Fa}&\text{Fa\#}&\text{Sol}&\text{Sol\#}&\text{La}&\text{La\#}&\text{Si}\\\text{Do}&\text{Do}&\text{Re}&\text{Re}&\text{Mi}&\text{Fa}&\text{Fa}&\text{Sol}&\text{Sol}&\text{La}&\text{La}&\text{Si}\\\end{matrix}\right.$$	
    
-    \section{OBRAS DE BERG}
-    \section{OBRAS DE WEBERN}
-    \section{CONCLUSIONES}
+    \section{Obras de Berg}
+    \section{Obras de Webern}
+    \section{Conclusiones}
